# GodotWasm_Study

./: .gitignore  README.md
TheBoy_wasm_proj/TheBoy_wasm/: project.godot
TheBoy_wasm_proj/TheBoy_wasm/assets/graphics/icons/: MaBoy_EmuIcon_32.png.import
TheBoy_wasm_proj/TheBoy_wasm/assets/graphics/logos/: godot_monochrome_dark.png.import
TheBoy_wasm_proj/TheBoy_wasm/assets/graphics/usefull/: transparent_128_128.png.import
TheBoy_wasm_proj/TheBoy_wasm/logic/libs/: conceptNativeLib.tres
TheBoy_wasm_proj/TheBoy_wasm/logic/libs/win64/: TheBoyLib.exp  TheBoyLib.lib
TheBoy_wasm_proj/TheBoy_wasm/logic/scenes/Main/: main.tscn
TheBoy_wasm_proj/TheBoy_wasm/logic/src/Main/: main.gdns
TheBoy_wasm_proj/TheBoy_wasm/resources/graphics/fonts/: JetBrainsMono_s20.tres  JetBrainsMono_s30.tres
TheBoy_wasm_proj/native/: CMakeLists.txt
TheBoy_wasm_proj/native/Main/: CMakeLists.txt  gdlib.cpp  main.cpp  main.h
godot_cpipi_project/: main.tscn  project.godot
godot_cpipi_project/gdnative_classes/: testLib.tres
godot_cpipi_project/gdnative_classes/classes/: main.gdns
godot_cpipi_project/scripts/: gdtest.gd
native/: CMakeLists.txt
native/src/: CMakeLists.txt  main.cpp  main.h  testlib.cpp
